--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -18,6 +18,31 @@
         border-radius: variables.$container-border-radius
         position: absolute
         top: -8rem
+        border: 3px solid variables.$text-color
+        animation-name: wave-animation
+        animation-duration: 2.1s
+        animation-iteration-count: infinite
+        transform-origin: 70% 70%
+        display: inline-block
+
+
+    @keyframes wave-animation
+        0%
+        transform: rotate(0deg)
+        10%
+        transform: rotate(14deg)
+        20%
+        transform: rotate(-8deg)
+        30%
+        transform: rotate(14deg)
+        40%
+        transform: rotate(-4deg)
+        50%
+        transform: rotate(10deg)
+        60%
+        transform: rotate(0deg)
+        100%
+        transform: rotate(0deg)
 
 
     .title
@@ -30,3 +55,4 @@
     .btn
 
         @include mixins.btn
+
