--- a/src/styles/components/tecnologiescontainer.sass
+++ b/src/styles/components/tecnologiescontainer.sass
@@ -45,14 +45,13 @@
         svg
             color: #61dafb
 
-    #node
+    #Bootstrap
         svg
-            color: #83cd29
+            color: #702CF7
 
 
 
 
 
 
-        
-        
+
